--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,9 @@
-<%= form_for(@post) do |f| %>
+<%= form_for :post, url: posts_path do |f| %>
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
 
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
 
-  <%= f.submit %>
+  <%= f.submit "Create Post"%>
 <% end %>
